v0.0.1/modules/schema/pages/class/CostType.adoc
= `CostType`
:toclevels: 4


+++A categorization for resources, often costs, in accounting transactions. Examples include: material components, building in service, coal sales, overhead, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CostType`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`CostType`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
CostType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CompatibleUnit {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpJournalEntry {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkCostDetail {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CostType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CostType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




CostType -> Status: status


CostType -> CompatibleUnit: CompatibleUnits


CostType -> ErpJournalEntry: ErpJournalEntries


CostType -> WorkCostDetail: WorkCostDetails


CostType -> CostType: ChildCostTypes


CostType -> CostType: ParentCostType


CostType -> DiagramObject: DiagramObjects


CostType -> InstanceSet: InstanceSet


CostType -> Name: Names


CostType -> ChangeSetMember: PropertiesCIMDataObject


CostType -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ParentCostType,`ParentCostType`>>
| 0..1
| xref::class/CostType.adoc[`CostType`]
| n/a

| <<amountAssignable,`amountAssignable`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if an amount can be assigned to the resource element (e.g., building in service, transmission plant, software development capital); false otherwise (e.g., internal labor, material components).+++

| <<code,`code`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++A codified representation of the resource element.+++

| <<level,`level`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The level of the resource element in the hierarchy of resource elements (recursive relationship).+++

| <<stage,`stage`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The stage for which this costType applies: estimated design, estimated actual or actual actual.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<ChildCostTypes,`ChildCostTypes`>>
| 0..*
| xref::class/CostType.adoc[`CostType`]
| n/a

| <<CompatibleUnits,`CompatibleUnits`>>
| 0..*
| xref::class/CompatibleUnit.adoc[`CompatibleUnit`]
| n/a

| <<ErpJournalEntries,`ErpJournalEntries`>>
| 0..*
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]
| n/a

| <<WorkCostDetails,`WorkCostDetails`>>
| 0..*
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#amountAssignable]
=== `amountAssignable`
+++True if an amount can be assigned to the resource element (e.g., building in service, transmission plant, software development capital); false otherwise (e.g., internal labor, material components).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.amountAssignable`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#ChildCostTypes]
=== `ChildCostTypes`


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.ChildCostTypes`
| Cardinality
| 0..*
| Type
| xref::class/CostType.adoc[`CostType`]


|===

//[discrete]
[#code]
=== `code`
+++A codified representation of the resource element.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.code`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#CompatibleUnits]
=== `CompatibleUnits`


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.CompatibleUnits`
| Cardinality
| 0..*
| Type
| xref::class/CompatibleUnit.adoc[`CompatibleUnit`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ErpJournalEntries]
=== `ErpJournalEntries`


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.ErpJournalEntries`
| Cardinality
| 0..*
| Type
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#level]
=== `level`
+++The level of the resource element in the hierarchy of resource elements (recursive relationship).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.level`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ParentCostType]
=== `ParentCostType`


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.ParentCostType`
| Cardinality
| 0..1
| Type
| xref::class/CostType.adoc[`CostType`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#stage]
=== `stage`
+++The stage for which this costType applies: estimated design, estimated actual or actual actual.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.stage`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WorkCostDetails]
=== `WorkCostDetails`


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.WorkCostDetails`
| Cardinality
| 0..*
| Type
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]


|===


