v1.1.0/modules/schema/pages/class/CostType.adoc
= `CostType`
:toclevels: 4


+++A categorization for resources, often costs, in accounting transactions. Examples include: material components, building in service, coal sales, overhead, etc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CostType`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`CostType`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ChildCostTypes,`ChildCostTypes`>>
//| [[slots_table.ChildCostTypes]]<<ChildCostTypes,`ChildCostTypes`>>
| 0..* +
xref::class/CostType.adoc[`CostType`]
| _n/a_
| _n/a_

| <<CompatibleUnits,`CompatibleUnits`>>
//| [[slots_table.CompatibleUnits]]<<CompatibleUnits,`CompatibleUnits`>>
| 0..* +
xref::class/CompatibleUnit.adoc[`CompatibleUnit`]
| _n/a_
| _n/a_

| <<ErpJournalEntries,`ErpJournalEntries`>>
//| [[slots_table.ErpJournalEntries]]<<ErpJournalEntries,`ErpJournalEntries`>>
| 0..* +
xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]
| _n/a_
| _n/a_

| <<ParentCostType,`ParentCostType`>>
//| [[slots_table.ParentCostType]]<<ParentCostType,`ParentCostType`>>
| 0..1 +
xref::class/CostType.adoc[`CostType`]
| _n/a_
| _n/a_

| <<WorkCostDetails,`WorkCostDetails`>>
//| [[slots_table.WorkCostDetails]]<<WorkCostDetails,`WorkCostDetails`>>
| 0..* +
xref::class/WorkCostDetail.adoc[`WorkCostDetail`]
| _n/a_
| _n/a_

| <<amountAssignable,`amountAssignable`>>
//| [[slots_table.amountAssignable]]<<amountAssignable,`amountAssignable`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if an amount can be assigned to the resource element (e.g., building in service, transmission plant, software...+++
| _n/a_

| <<code,`code`>>
//| [[slots_table.code]]<<code,`code`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++A codified representation of the resource element.+++
| _n/a_

| <<level,`level`>>
//| [[slots_table.level]]<<level,`level`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The level of the resource element in the hierarchy of resource elements (recursive relationship).+++
| _n/a_

| <<stage,`stage`>>
//| [[slots_table.stage]]<<stage,`stage`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The stage for which this costType applies: estimated design, estimated actual or actual actual.+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#amountAssignable]
=== `amountAssignable`
+++True if an amount can be assigned to the resource element (e.g., building in service, transmission plant, software development capital); false otherwise (e.g., internal labor, material components).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.amountAssignable`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.amountAssignable,&#10548;>>
--
////


//[discrete]
[#ChildCostTypes]
=== `ChildCostTypes`



[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.ChildCostTypes`
| Cardinality
| 0..*
| Type
| xref::class/CostType.adoc[`CostType`]


|===

////
[.text-left]
--
<<slots_table.ChildCostTypes,&#10548;>>
--
////


//[discrete]
[#code]
=== `code`
+++A codified representation of the resource element.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.code`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.code,&#10548;>>
--
////


//[discrete]
[#CompatibleUnits]
=== `CompatibleUnits`



[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.CompatibleUnits`
| Cardinality
| 0..*
| Type
| xref::class/CompatibleUnit.adoc[`CompatibleUnit`]


|===

////
[.text-left]
--
<<slots_table.CompatibleUnits,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ErpJournalEntries]
=== `ErpJournalEntries`



[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.ErpJournalEntries`
| Cardinality
| 0..*
| Type
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]


|===

////
[.text-left]
--
<<slots_table.ErpJournalEntries,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#level]
=== `level`
+++The level of the resource element in the hierarchy of resource elements (recursive relationship).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.level`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.level,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#ParentCostType]
=== `ParentCostType`



[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.ParentCostType`
| Cardinality
| 0..1
| Type
| xref::class/CostType.adoc[`CostType`]


|===

////
[.text-left]
--
<<slots_table.ParentCostType,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#stage]
=== `stage`
+++The stage for which this costType applies: estimated design, estimated actual or actual actual.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.stage`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.stage,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#WorkCostDetails]
=== `WorkCostDetails`



[cols="h,4",width=65%]
|===
| URI
| `cim:CostType.WorkCostDetails`
| Cardinality
| 0..*
| Type
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]


|===

////
[.text-left]
--
<<slots_table.WorkCostDetails,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CompatibleUnit.adoc[`CompatibleUnit`] | xref::class/CompatibleUnit.adoc#CostType[`CostType`]



| xref::class/CostType.adoc[`CostType`] | xref::class/CostType.adoc#ParentCostType[`ParentCostType`]



| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`] | xref::class/ErpJournalEntry.adoc#CostTypes[`CostTypes`]



| xref::class/WorkCostDetail.adoc[`WorkCostDetail`] | xref::class/WorkCostDetail.adoc#CostType[`CostType`]


|===

